--- a/ustra-ui/public/index.html
+++ b/ustra-ui/public/index.html
@@ -9,6 +9,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,6 +27,24 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style>
+      *,
+      *::after,
+      *::before{
+        box-sizing: border-box;
+        padding: 0;
+        margin: 0;
+      }
+
+      html{
+        font-size: 62.5%;
+      }
+
+      body{
+        font-size: 1.6rem;
+        font-family: 'Noto Sans JP', sans-serif;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
