--- a/ustra-ui/public/index.html
+++ b/ustra-ui/public/index.html
@@ -59,5 +59,17 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+      document.addEventListener('click',(e)=>{
+        let input = document.querySelector('.dd-input')
+          if(input.checked === true ) {
+            input.checked = false
+          }
+          else if(e.target.id ==='test' || e.target.id === 'test1'){
+            if(input.checked === false)
+               input.checked = true
+          }
+    })
+    </script>
   </body>
 </html>
